--- a/index.html
+++ b/index.html
@@ -17,37 +17,50 @@
     <link rel="stylesheet" href="/public/styles.css" />
   </head>
   <body>
-    <header class="header">
-      <div class="social-media">
-        <h1>sreymeas</h1>
-        <ul>
-          <li>
-            <a
-              href="https://www.frontendmentor.io/profile/meass"
-              target="_blank"
-            >
-              <img
-                src="/assets/images/icon-frontend-mentor.svg"
-                alt="icon-frontend-mentor"
-              />
-            </a>
-          </li>
-          <li>
-            <a href="https://github.com/meass" target="_blank">
-              <img src="/assets/images/icon-github.svg" alt="icon-github" />
-            </a>
-          </li>
-          <li>
-            <a
-              href="https://www.linkedin.com/in/sreymeas-nao-84bb75107/"
-              target="_blank"
-            >
-              <img src="/assets/images/icon-linkedin.svg" alt="icon-linkedin" />
-            </a>
-          </li>
-        </ul>
-      </div>
-      <section class="intro-desktop">
+    <div class="container">
+      <header class="header">
+        <div class="social-media">
+          <h1>sreymeas</h1>
+          <ul>
+            <li>
+              <a
+                href="https://www.frontendmentor.io/profile/meass"
+                target="_blank"
+              >
+                <img
+                  src="/assets/images/icon-frontend-mentor.svg"
+                  alt="icon-frontend-mentor"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/meass" target="_blank">
+                <img src="/assets/images/icon-github.svg" alt="icon-github" />
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/sreymeas-nao-84bb75107/"
+                target="_blank"
+              >
+                <img
+                  src="/assets/images/icon-linkedin.svg"
+                  alt="icon-linkedin"
+                />
+              </a>
+            </li>
+          </ul>
+        </div>
+        <section class="intro-desktop">
+          <h2>Nice to meet you! <span>I’m Sreymeas.</span></h2>
+          <p>
+            Based in Cambodia, I’m a front-end developer passionate about
+            building accessible web apps that users love.
+          </p>
+          <span>contact me</span>
+        </section>
+      </header>
+      <section class="intro">
         <h2>Nice to meet you! <span>I’m Sreymeas.</span></h2>
         <p>
           Based in Cambodia, I’m a front-end developer passionate about building
@@ -55,50 +68,42 @@
         </p>
         <span>contact me</span>
       </section>
-    </header>
-    <section class="intro">
-      <h2>Nice to meet you! <span>I’m Sreymeas.</span></h2>
-      <p>
-        Based in Cambodia, I’m a front-end developer passionate about building
-        accessible web apps that users love.
-      </p>
-      <span>contact me</span>
-    </section>
-    <hr />
-    <section class="skill">
-      <div>
-        <h3>HTML</h3>
-        <span>5 Years Experience</span>
-      </div>
-      <div>
-        <h3>CSS</h3>
-        <span>5 Years Experience</span>
-      </div>
-      <div>
-        <h3>Javascript</h3>
-        <span>4 Years Experience</span>
-      </div>
-      <div>
-        <h3>GIT</h3>
-        <span>5 Years Experience</span>
-      </div>
-      <div>
-        <h3>React/Nextjs</h3>
-        <span>3 Years Experience</span>
-      </div>
-      <div>
-        <h3>Tailwind</h3>
-        <span>3 Years Experience</span>
-      </div>
-    </section>
-    <hr />
-    <main>
-      <div class="projects">
-        <h2>Projects</h2>
-        <span>contact me</span>
-      </div>
-      <div id="projectContainer"></div>
-    </main>
+      <hr />
+      <section class="skill">
+        <div>
+          <h3>HTML</h3>
+          <span>5 Years Experience</span>
+        </div>
+        <div>
+          <h3>CSS</h3>
+          <span>5 Years Experience</span>
+        </div>
+        <div>
+          <h3>Javascript</h3>
+          <span>4 Years Experience</span>
+        </div>
+        <div>
+          <h3>GIT</h3>
+          <span>5 Years Experience</span>
+        </div>
+        <div>
+          <h3>React/Nextjs</h3>
+          <span>3 Years Experience</span>
+        </div>
+        <div>
+          <h3>Tailwind</h3>
+          <span>3 Years Experience</span>
+        </div>
+      </section>
+      <hr />
+      <main>
+        <div class="projects">
+          <h2>Projects</h2>
+          <span>contact me</span>
+        </div>
+        <div id="projectContainer"></div>
+      </main>
+    </div>
     <!-- <footer>
       <h2>Contact</h2>
       <p>
@@ -133,31 +138,36 @@
         </ul>
       </div>
     </footer> -->
-    <footer class="footer social-media">
-      <h1>sreymeas</h1>
-      <ul>
-        <li>
-          <a href="https://www.frontendmentor.io/profile/meass" target="_blank">
-            <img
-              src="/assets/images/icon-frontend-mentor.svg"
-              alt="icon-frontend-mentor"
-            />
-          </a>
-        </li>
-        <li>
-          <a href="https://github.com/meass" target="_blank">
-            <img src="/assets/images/icon-github.svg" alt="icon-github" />
-          </a>
-        </li>
-        <li>
-          <a
-            href="https://www.linkedin.com/in/sreymeas-nao-84bb75107/"
-            target="_blank"
-          >
-            <img src="/assets/images/icon-linkedin.svg" alt="icon-linkedin" />
-          </a>
-        </li>
-      </ul>
+    <footer class="footer">
+      <div class="footer-content social-media">
+        <h1>sreymeas</h1>
+        <ul>
+          <li>
+            <a
+              href="https://www.frontendmentor.io/profile/meass"
+              target="_blank"
+            >
+              <img
+                src="/assets/images/icon-frontend-mentor.svg"
+                alt="icon-frontend-mentor"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/meass" target="_blank">
+              <img src="/assets/images/icon-github.svg" alt="icon-github" />
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/sreymeas-nao-84bb75107/"
+              target="_blank"
+            >
+              <img src="/assets/images/icon-linkedin.svg" alt="icon-linkedin" />
+            </a>
+          </li>
+        </ul>
+      </div>
     </footer>
     <script src="/public/main.js"></script>
   </body>
